# jnipp

./: .gitignore  CMakeLists.txt  jnipp.code-workspace
include/jni/: array.hpp  jni.hpp  object.hpp  string.hpp  type.hpp
include/jni/detail/: detail.hpp
include/jni/util/: util.hpp
include/jnipp/: array.hpp  environment.hpp  field_id.hpp  java_vm.hpp  jni.hpp  method_id.hpp  object.hpp  string.hpp  type.hpp
include/jnipp/jvmti/: environment.hpp
include/jvmti/: jvmti.hpp
include/jvmti/detail/: detail.hpp
